# biscuit

./: DESIGN.md  README.md  SECURITY.md  SPECIFICATIONS.md  SUMMARY.md  schema.proto  schema2.proto
assets/: constants.md
biscuit-web-key/: README.md  SPECIFICATIONS.md
code/: README.md
code/biscuit-poc/: Cargo.toml
code/biscuit-poc/src/: builder.rs  lib.rs  ser.rs  verifier.rs
code/bls/: README.md
code/datalog/: Cargo.toml  README.md
code/mcl/: README.md  aggregated.cpp
experimentations/: README.md
experimentations/biscuit-poc/: README.md
experimentations/datalog/: Cargo.toml
samples/: README.md  test10_authority_rules.bc  test10_separate_block_validation.bc  test11_expired_token.bc  test11_verifier_authority_caveats.bc  test12_authority_caveats.bc  test12_authority_rules.bc  test13_block_rules.bc  test13_verifier_authority_caveats.bc  test14_block_rules.bc  test14_regex_constraint.bc  test1_basic.bc  test2_different_root_key.bc  test3_invalid_signature_format.bc  test4_random_block.bc  test5_invalid_signature.bc  test6_reordered_blocks.bc  test7_invalid_block_fact_authority.bc  test7_missing_authority_tag.bc  test8_invalid_block_fact_ambient.bc  test8_invalid_block_fact_authority.bc  test9_expired_token.bc  test9_invalid_block_fact_ambient.bc
samples/current/: README.md  samples.json  test001_basic.bc  test002_different_root_key.bc  test003_invalid_signature_format.bc  test004_random_block.bc  test005_invalid_signature.bc  test006_reordered_blocks.bc  test007_scoped_rules.bc  test008_scoped_checks.bc  test009_expired_token.bc  test020_sealed.bc  (+43 more)
(+107 files in other folders)
